--- a/dlnd_image_classification.ipynb
+++ b/dlnd_image_classification.ipynb
@@ -140,8 +140,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 250,
-       "width": 253
+       "height": 250.0,
+       "width": 253.0
       }
      },
      "output_type": "display_data"
@@ -199,9 +199,8 @@
     "    # Convert all data to Float32 in preparation for normalization\n",
     "    data = data.astype('float32')\n",
     "    # Check is data is Not Normalized before attempting normalization\n",
-    "    if data.max() > 1.0:\n",
-    "        # divide by 255 to normalize\n",
-    "        data/=255.0\n",
+    "    # divide by Max Value (255) to normalize\n",
+    "    data /= data.max()\n",
     "    return data\n",
     "\n",
     "\n",
@@ -572,7 +571,7 @@
     "    x = x_tensor.get_shape().as_list()\n",
     "    \n",
     "    # Create Weights and Bias using tensor shape and outputs\n",
-    "    weight = tf.Variable(tf.truncated_normal([x[1], num_outputs]))\n",
+    "    weight = tf.Variable(tf.truncated_normal([x[1], num_outputs], stddev=5e-2, mean=0.01))\n",
     "    bias = tf.Variable(tf.zeros(num_outputs))\n",
     "    \n",
     "    # Output Layer - class prediction \n",
@@ -624,10 +623,10 @@
     "    # conv2d_maxpool(x, conv_num_outputs, conv_ksize, conv_strides, pool_ksize, pool_strides)\n",
     "    conv1 = conv2d_maxpool(x, 32, (5,5), (1,1), (3,3), (2,2))\n",
     "    conv2 = conv2d_maxpool(conv1, 64, (5,5), (1,1), (3,3), (2,2))\n",
-    "    conv2 = conv2d_maxpool(conv1, 128, (5,5), (1,1), (3,3), (2,2))\n",
+    "    conv3 = conv2d_maxpool(conv2, 128, (5,5), (1,1), (3,3), (2,2))\n",
     "    \n",
     "    #   flatten(x_tensor)\n",
-    "    conv2_f = flatten(conv2)\n",
+    "    conv2_f = flatten(conv3)\n",
     "\n",
     "    #   fully_conn(x_tensor, num_outputs)\n",
     "    fc1 = fully_conn(conv2_f, 512)\n",
@@ -1377,8 +1376,8 @@
      },
      "metadata": {
       "image/png": {
-       "height": 319,
-       "width": 355
+       "height": 319.0,
+       "width": 355.0
       }
      },
      "output_type": "display_data"
@@ -1457,7 +1456,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
